@@ -1,9 +1,9 @@
-# $Id: PKGBUILD 43443 2009-06-24 02:05:46Z eric $
-# Maintainer: Eric Belanger <eric@archlinux.org>
+# Maintainer: Jens Pranaitis <jens@chaox.net>
+# Contributor: Eric Belanger <eric@archlinux.org>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=fontforge
-pkgver=20090622
+pkgver=20090914
 pkgrel=1
 pkgdesc="An outline and bitmap font editor"
 arch=('i586' 'i686' 'x86_64')
@@ -13,12 +13,13 @@ depends=('libxkbui' 'libxi')
 makedepends=('freetype2')
 options=('!libtool' '!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/fontforge/fontforge_full-${pkgver}.tar.bz2)
-md5sums=('3f4ff2d2dab200f47595bff38baa13ca')
-sha1sums=('bc638eeeb4cf2d540773bacc52cc6bac1c6ca76f')
+md5sums=('16a744e42e8944c4298f7e004f95dd31')
+sha1sums=('040eaca510980870e984719d3b77e98131b3bce3')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr --mandir=/usr/share/man --with-multilayer --with-devicetables --without-python || return 1
+  ./configure --prefix=/usr --mandir=/usr/share/man --enable-type3 --enable-double \
+    --with-devicetables --without-python || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
   install -D -m644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
