@@ -1,3 +1,10 @@
+2009-09-19  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20090914-1
+	* Upstream update
+	* Enabled double support (close FS#16038)
+	* Changed deprecated multilayer option to type3
+
 2009-06-23  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20090622-1
